--- a/resources/langs/id.json
+++ b/resources/langs/id.json
@@ -46,5 +46,6 @@
   "showAll": "Lihat Semua",
   "selectChapter": "Pilih Chapter",
   "fromChapter": "Dari",
-  "bookmarkedSeries": "Series Ditandai"
+  "bookmarkedSeries": "Series Ditandai",
+  "genres": "Genre"
 }
