fix image icon & can't download using data

--- a/resources/langs/en.json
+++ b/resources/langs/en.json
@@ -14,7 +14,7 @@
   "chapterReached": "Chapter Reached", 
   "chapterRemains": "Chapter Remaining",
   "continueRead": "Continue Read",
-  "startRead": "Start",
+  "startRead": "Start Read",
   "settingsName": "Settings",
   "langguange": "Langguage Settings",
   "miscellaneous": "Miscellaneous",
