--- a/resources/langs/id.json
+++ b/resources/langs/id.json
@@ -15,7 +15,7 @@
   "chapterReached": "Chapter Dicapai",
   "chapterRemains": "Chapter Tersisa",
   "continueRead": "Lanjutkan Membaca",
-  "startRead": "Mulai",
+  "startRead": "Mulai Baca",
   "settingsName": "Pengaturan",
   "langguange": "Pengaturan Bahasa",
   "miscellaneous": "Lainnya",
